<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF9F6"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-8dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="228dp"
        android:layout_height="78dp"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="445dp"
        android:gravity="center"
        android:text="@string/islamic_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#BE114C"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="136dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/cover" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="67dp"
        android:layout_height="21dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:gravity="center"
        android:text="@string/waz"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speaker" />


    <ImageView
        android:id="@+id/tasbeeh"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="289dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tasbih" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="69dp"
        android:layout_height="18dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="290dp"
        android:gravity="center"
        android:text="@string/tasbeeh"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasbeeh" />

    <ImageView
        android:id="@+id/youtube"
        android:layout_width="79dp"
        android:layout_height="73dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="154dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tasbeeh"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/mediaplayer" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="74dp"
        android:layout_height="21dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="Videos"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/youtube" />

    <ImageView
        android:id="@+id/quraan"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="293dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="48dp"
        android:background="#FAF9F6"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quran" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="68dp"
        android:layout_height="19dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="51dp"
        android:gravity="center"
        android:text="Quraan"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quraan" />

    <ImageView
        android:id="@+id/masque"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="289dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasbeeh"
        app:srcCompat="@drawable/mosque" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="69dp"
        android:layout_height="18dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/mosque"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/masque" />

    <ImageView
        android:id="@+id/speaker"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toEndOf="@+id/masque"
        app:layout_constraintTop_toBottomOf="@+id/youtube"
        app:srcCompat="@drawable/speaker" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="67dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="Calendar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/calender" />

    <ImageView
        android:id="@+id/calender"
        android:layout_width="69dp"
        android:layout_height="75dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/speaker"
        app:layout_constraintTop_toBottomOf="@+id/quraan"
        app:srcCompat="@drawable/calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>